// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<thead
  class=""
  data-test-id="cf-ui-table-head"
>
  <tr
    class="TableRow"
    data-test-id="cf-ui-table-row"
  >
    <th
      align="left"
      class="TableCell TableCell--head"
      data-test-id="cf-ui-table-cell"
      style="top: 0px;"
    >
      test
    </th>
  </tr>
</thead>
`;

exports[`renders the component as sticky 1`] = `
<thead
  class="TableHead--sticky"
  data-test-id="cf-ui-table-head"
>
  <tr
    class="TableRow"
    data-test-id="cf-ui-table-row"
  >
    <th
      align="left"
      class="TableCell TableCell--head"
      data-test-id="cf-ui-table-cell"
      style="top: 0px;"
    >
      test
    </th>
  </tr>
</thead>
`;

exports[`renders the component as sticky and with an offset Top 1`] = `
<thead
  class="TableHead--sticky"
  data-test-id="cf-ui-table-head"
>
  <tr
    class="TableRow"
    data-test-id="cf-ui-table-row"
  >
    <th
      align="left"
      class="TableCell TableCell--head"
      data-test-id="cf-ui-table-cell"
      style="top: 20px;"
    >
      test
    </th>
  </tr>
</thead>
`;

exports[`renders the component with additional className 1`] = `
<thead
  class="extra-class-name"
  data-test-id="cf-ui-table-head"
>
  <tr
    class="TableRow"
    data-test-id="cf-ui-table-row"
  >
    <th
      align="left"
      class="TableCell TableCell--head"
      data-test-id="cf-ui-table-cell"
      style="top: 0px;"
    >
      test
    </th>
  </tr>
</thead>
`;
